--- a/src/BiolabIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -8,7 +8,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Programa Merck Cuida</title>
+	<title>Programa Integra Vida | Biopas</title>
 
 </head>
 
@@ -18,38 +18,70 @@
 	============================================= -->
 	<div id="wrapper">
 
-		<partial name="~/Views/PartialViews/HeaderLayout.cshtml" />
+
+
+		<!-- Header
+		============================================= -->
+		<header id="header" class="bg-white" data-sticky-class="not-dark" data-responsive-class="not-dark">
+			<div id="header-wrap">
+				<div class="container">
+					<div class="text-center">
+
+
+						<div class="primary-menu-trigger">
+							<button class="cnvs-hamburger" type="button" title="Open Mobile Menu">
+								<span class="cnvs-hamburger-box"><span class="cnvs-hamburger-inner"></span></span>
+							</button>
+						</div>
+
+						<!-- Primary Navigation
+						============================================= -->
+						<nav class="primary-menu with-arrows">
+
+
+							<ul class="menu-container justify-content-center">
+								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Sobre o Programa</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="/cadastre-se"><div>Como Participar</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="/#encontre"><div>Encontre uma Farmácia</div></a></li>
+								<li class="menu-item"><a class="menu-link open-regulamento-menu" href="#modal-regulamento"><div>Regulamento</div></a></li>
+							</ul>
+
+						</nav><!-- #primary-menu end -->
+
+					</div>
+				</div>
+			</div>
+			<div class="header-wrap-clone"></div>
+		</header><!-- #header end -->
+		<!-- Top Bar
+		============================================= -->
+		<div id="top-bar" class="text-center dark">
+		</div>
 
 		<!-- Slider
 		============================================= -->
-		<section id="slider" class="slider-element" style="margin-bottom: 30px;">
+		<section id="" class=" bg-white">
 
-			<!-- Slider Background Map
-			============================================= -->			
-			<img class="banner-topo hidden-xs" src="img/banner-topo.png" alt="Programa Merck Cuida">
-			
+
+
 			<!-- Slider Titles
 			============================================= -->
-			<div class="vertical-middle container dark hidden-xs" style="padding-top: 50px">
+			<div class="pb-50 pt-50 text-center container dark ">
 				<div class="row justify-content-between align-items-center">
-					<div class="col-md-7">
+					<div class="col-md-12">
 						<div class="slider-title">
-							<h2 class="text-white text-rotater mb-3 d-inline-block font-merck gradient-text gradient-horizon" data-separator="," data-rotate="fadeIn" data-speed="3500">Nosso compromisso<br> com a saúde dos<br> nossos pacientes.</h2>
-							<p class="sub-titulo">Seu <strong>programa de desconto</strong> em<br> medicamentos Merck.</p>
+							<img src="img/logo-integra-vida.png" alt="Programa Integra Vida" title="Programa Integra Vida">
+							<p class="fw-medium text-black-50">O <strong>Programa Integra Vida</strong> conecta inovação, acesso e qualidade de vida,<br> proporcionando acesso contínuo para que pacientes tenham adesão e<br> continuidade ao tratamento.</p>
 						</div>
-						<a href="#cadastre-se" class="button btn-merck text-white button-large color ms-0">Cadastre-se</a>
+						<!-- <a href="#cadastre-se" class="button btn-biopas text-white button-large color ms-0">Cadastre-se</a> -->
 					</div>
-					
+
 				</div>
 			</div>
 
-				<!-- Banner Mobile
-			============================================= -->			
-			<img class=" visible-xs" src="img/banner-topo-mob.png" alt="Programa Merck Cuida - Mobile">
+
 
 		</section><!-- #slider end -->
-
-		
 		<!-- Content
 		============================================= -->
 		<section id="content">
@@ -57,7 +89,7 @@
 
 				<div class="bg-roxo">
 
-					<div id="como-funciona" class="container" style="">
+					<div id="como-funciona" class="container pt-30">
 
 						<!-- Slider negetive Box
 						============================================= -->
@@ -66,31 +98,40 @@
 								<div class="slider-bottom-box" style="border-radius: 50px;">
 									<div class="row align-items-center">
 										<div class="col-lg-12 mb-3 mb-lg-0">
-											<h2 class="mb-3 h1 fw-light font-merck text-roxo text-center">Como funciona</h2>
-											<p class="text-center mb-0">
-												<img src="img/grafico-linha.png" alt="Como Funciona - Merck" title="Como Funciona - Merck">
-											</p>
+											<h2 class="mb-3 h1 fw-bolder text-uppercase text-center">Como participar</h2>
 
 											<div class="col-lg-12 pt-20" style="padding-left: 3%; padding-right: 3%">
-											<div class="row text-center">
-											
-											<div class="col-lg-3 text-roxo text-center col-sm-3 mb-30-mob">
-												Tenha em mãos sua <strong>prescrição<br> médica</strong>.
+												<div class="row text-center">
+
+													<div class="col-lg-3 text-black-50 text-center col-sm-3 mb-30-mob">
+														<span class="row justify-content-center">
+															<div class="circulo-01"><h2 class="h1 fw-bolder text-uppercase text-center">1.</h2></div>
+														</span>
+														Tenha em mãos sua <strong>prescrição<br> médica</strong>.
+													</div>
+													<div class="col-lg-3 text-black-50 text-center col-sm-3 mb-30-mob">
+														<span class="row justify-content-center">
+															<div class="circulo-02"><h2 class="h1 fw-bolder text-uppercase text-center">2.</h2></div>
+														</span>
+														<strong>Cadastre-se</strong> pelo site Integra Vida ou nas farmácias parceiras.
+													</div>
+													<div class="col-lg-3 text-black-50 text-center col-sm-3 mb-30-mob">
+														<span class="row justify-content-center">
+															<div class="circulo-03"><h2 class="h1 fw-bolder text-uppercase text-center">3.</h2></div>
+														</span>
+														<strong>Preencha o<br> cadastro</strong> e dê o aceite<br> no regulamento.
+													</div>
+													<div class="col-lg-3 text-black-50 text-center col-sm-3 mb-30-mob">
+														<span class="row justify-content-center">
+															<div class="circulo-04"><h2 class="h1 fw-bolder text-uppercase text-center">4.</h2></div>
+														</span>
+														Pronto! Você já pode<br><strong>aproveitar seus benefícios</strong>.
+													</div>
+												</div>
 											</div>
-											<div class="col-lg-3 text-roxo text-center col-sm-3 mb-30-mob">
-												<strong>Cadastre-se</strong> pelo site ou nas farmácias credenciadas no programa.
-											</div>
-											<div class="col-lg-3 text-roxo text-center col-sm-3 mb-30-mob">
-												<strong>Informe</strong> seus dados. <strong>Leia e aceite</strong> o regulamento.
-											</div>
-											<div class="col-lg-3 text-roxo text-center col-sm-3 mb-30-mob">
-												Tudo certo!<br><strong>Aproveite os descontos</strong>.
-											</div>
-										</div>
-									</div>
 
 										</div>
-								
+
 									</div>
 								</div>
 							</div>
@@ -99,8 +140,8 @@
 						<!-- Features Section
 						============================================= -->
 						<div id="cadastre-se" class=" text-center mx-auto mb-0 pb-80 pt-80 pt-80-mob" style="margin-top: -30px">
-							<p class="text-input">Estamos comprometidos em<br> oferecer o <strong>melhor suporte</strong> para<br> sua jornada de tratamento.</p>
-						
+							<p class="h3 lh-1 text-white fw-bolder">Vamos iniciar o seu<br> cadastro?</p>
+
 							<form id="cadastre-se-form" method="post" action="/cadastre-se">
 								<div><input id="input-cpf" class="input-cpf" type="text" name="cpf" id="cpf" placeholder="Coloque seu CPF" /><br></div>
 								<div><span class="input-validation" name="cpf" id="cpf-validation"></span></div>
@@ -112,19 +153,18 @@
 
 				<!-- Domain Section
 				============================================= -->
-				<div id="encontre" class="section section-domain mt-0 mb-0" style="background: #F5F5F5">
+				<div id="encontre" class="section section-domain mt-0 mb-0" style="background: #00236b">
 					<div class="container">
 						<div class="row justify-content-between align-items-center">
 							<div class="col-md-12">
 								<div class="heading-block mb-0 border-bottom-0 text-center">
-									<h3 class="ls-0 text-transform-none font-merck text-rosa">Encontre uma farmácia</h3>									
+									<h2 class="mb-3 h1 fw-bolder text-white text-uppercase text-center">Encontre uma Farmácia</h2>
 								</div>
 							</div>
-							
+
 							<div class="col-md-12">
 								<div class="heading-block mb-0 border-bottom-0">
-									
-									<p class="mb-0 fs-4 text-roxo text-center mb-20">Conheça as<br> <strong>farmácias parceiras</strong>.</p>
+
 
 									<div class="row text-center">
 										<div class="col-lg-3">
@@ -182,7 +222,7 @@
 							</div>
 
 							<div class="col-md-12" style="display: flex;justify-content: center">
-								<form class="busca-cep-form" id="busca-cep-form">
+								<form class="busca-cep-form pt-40" id="busca-cep-form">
 									<div class="input-group shadow-lg" style="border-radius: 50px;">
 										<input type="text" max="9" name="cep" class="form-control input-cep not-dark" value="" placeholder="Coloque seu CEP">
 										<span class="input-group-text bg-white"><input class="submit-cep" type="submit" name="cep-submit" id="cep-submit-desktop" value="Buscar" /></span>
@@ -192,7 +232,7 @@
 
 							<div class="col-md-4" style="max-height:600px; overflow-y:scroll;">
 								<div class="box-resultados">
-									<div class="box-resultados-int" >
+									<div class="box-resultados-int">
 									</div>
 								</div>
 							</div>
@@ -208,20 +248,52 @@
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 		</section><!-- #content end -->
 
-		<partial name="~/Views/PartialViews/FooterPink.cshtml" />
+		<section id="" class="mt-0 pt-0 bg-rosa">
+			<div class="container">
+				<div class="swiper_wrapper min-vh-60 min-vh-lg-75" data-loop="true">
+
+					<div class="col-lg-10 offset-lg-1 bg-white pt-80 p-40-mob" style="border-radius: 80px;">
+						<div class="row">
+
+
+							<div class="col-lg-12 text-center">
+								<p class="text-center-xs">COD XXXXXX-Fev/2025 - Material destinado a todos os públicos.</p>
+								<img src="img/logo-biopas.png" alt="Biopas" title="Biopas">
+								<h3 class="text-center-xs mb-0 pt-30 fw-light">Líder em soluções conectando você a sua melhor saúde.</h3>
+
+
+							</div>
+
+							<div class="col-lg-12 text-center pt-80 mb-0">
+								<p>
+									<a target="_blank" href="#" class="text-black">Política de Privacidade</a>
+									<span class="text-rosa">|</span>
+									<a target="_blank" href="#" class="text-black">Termos de Uso</a>
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<!-- <p class="text-white text-center mt-40">© 2017 - 2024 Merck KGaA, Darmstadt, Germany and/or its affiliates. All rights reserved.</p> -->
+
+					<p class=" text-center mt-40">
+						© 2025 Programa Integra Vida®. All rights reserved. <br>
+						"AV-CHP-ATA-M31-2025-Vig.MAR2027-BR. Material aprovado em março de 2025"
+					</p>
+				</div>
+			</div>
+		</section>
 
 		<partial name="~/Views/PartialViews/ContentRegulamento.cshtml" />
 
 		<div id="top-bar" class="text-center dark">
-			
 		</div>
 
 	</div><!-- #wrapper end -->
-
 	<!-- Go To Top
 	============================================= -->
 	<div id="gotoTop" class="uil uil-angle-up"></div>
@@ -230,8 +302,9 @@
 
 	<script type="text/javascript">
 		(function() {
-			merckPages.indexPage('@Model.GoogleMapsApiKey');
+			qrvPages.indexPage('@Model.GoogleMapsApiKey');
 		})();
 	</script>
+
 </body>
 </html>
