--- a/src/BiolabIntegraVida.Web/Views/PartialViews/FootDependencies.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/PartialViews/FootDependencies.cshtml
@@ -1,6 +1,6 @@
 <!-- JavaScripts -->
 <script src="js/plugins.min.js"></script>
 <script src="js/functions.bundle.js"></script>
-<script src="js/merck-custom.js"></script>
-<script src="js/merck-pages.js"></script>
-<script src="js/merck-validation.js"></script>
+<script src="js/qrv-custom.js"></script>
+<script src="js/qrv-pages.js"></script>
+<script src="js/qrv-validation.js"></script>
