--- a/src/BiolabIntegraVida.Web/Views/PartialViews/HeadDependencies.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/PartialViews/HeadDependencies.cshtml
@@ -34,3 +34,8 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
+<!-- Cookie Notice Pro -->
+<script src="vendors/jquery.min.js"></script>
+<link rel="stylesheet" href="css/cookienoticepro.style.css" />
+<script src="cookienoticepro.script.js"></script>
