--- a/src/BiolabIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -303,6 +303,7 @@
 	<script type="text/javascript">
 		(function() {
 			qrvPages.indexPage('@Model.GoogleMapsApiKey');
+			qrvCookie.init('@Model.GoogleAnalyticsId');
 		})();
 	</script>
 
