--- a/src/BiolabIntegraVida.Web/Views/PartialViews/FootDependencies.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/PartialViews/FootDependencies.cshtml
@@ -4,3 +4,9 @@
 <script src="js/qrv-custom.js"></script>
 <script src="js/qrv-pages.js"></script>
 <script src="js/qrv-validation.js"></script>
+
+<!-- Cookie Notice Pro -->
+<script src="js/jquery.min.js"></script>
+<link rel="stylesheet" href="css/cookienoticepro.style.css" />
+<script src="js/cookienoticepro.script.js"></script>
+<script src="js/qrv-cookienoticepro.js"></script>
