Correção de referência duplicada de jQuery

--- a/src/BiolabIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
@@ -32,7 +32,7 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html">
+							<a href="/">
 								<img class="logo-default p-2" srcset="img/logo-integra-vida.png" src="img/logo-integra-vida.png" alt="Logo Programa Integra Vida" title="Logo Programa Integra Vida">
 							</a>
 						</div><!-- #logo end -->
