Atualização da estilização da listagem

--- a/src/BiolabIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiolabIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -223,7 +223,7 @@
 							</div>
 							-->
 
-							<div class="col-md-12" style="display: flex;justify-content: center">
+							<div class="col-md-12 pb-30" style="display: flex;justify-content: center">
 								<form class="busca-cep-form pt-40" id="busca-cep-form">
 									<div class="input-group shadow-lg" style="border-radius: 50px;">
 										<input type="text" max="9" name="cep" class="form-control input-cep not-dark" value="" placeholder="Coloque seu CEP">
@@ -232,7 +232,7 @@
 								</form>
 							</div>
 
-							<div class="col-md-4" style="max-height:600px; overflow-y:scroll;">
+							<div class="col-md-4" style="max-height:600px">
 								<div class="box-resultados">
 									<div class="box-resultados-int">
 									</div>
@@ -240,7 +240,7 @@
 							</div>
 
 							<div class="col-md-8 mt-4 mt-lg-0">
-								<article class="portfolio-item pt-50">
+								<article class="portfolio-item">
 									<div class="portfolio-image">
 										<div style="border:0; border-radius: 50px; width: 100%; height: 600px;" class="google-maps" id="google-maps-container"></div>
 									</div>
