Atualização de regulamento e documentos de instalação e manual, remoção de termos de uso, remoção de locais escrito Merck

--- a/src/BiopasIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
@@ -221,8 +221,8 @@
 						<div class="row justify-content-between align-items-center">
 							<div class="col-md-12 pt-40">
 								<div class="heading-block mb-0 border-bottom-0 text-center">
-									<h3 class="ls-0 text-transform-none font-merck text-rosa">Senha</h3>		
-									<p class="text-roxo">Para acessar os serviços exclusivos do Programa Merck Cuida<br class="hidden-xs">cadastre a sua senha conforme a orientação abaixo.</p>							
+									<h3 class="ls-0 text-transform-none font-qrv text-rosa">Senha</h3>		
+									<p class="text-roxo">Para acessar os serviços exclusivos do Programa <br class="hidden-xs">cadastre a sua senha conforme a orientação abaixo.</p>							
 								</div>
 							</div>
 							
@@ -284,7 +284,7 @@
 
 									<div class="col-md-12 pt-40">
 										<div class="heading-block mb-0 border-bottom-0 text-center">
-											<h3 class="ls-0 text-transform-none font-merck text-rosa">Tudo certo!</h3>		
+											<h3 class="ls-0 text-transform-none font-qrv text-rosa">Tudo certo!</h3>		
 											<h5 class="text-roxo">Você já pode aproveitar seus descontos</h5>							
 										</div>
 									</div>
