--- a/src/BiopasIntegraVida.Web/Views/LandingPages/erro.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/erro.cshtml
@@ -8,7 +8,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Programa Merck Cuida | Cadastre-se</title>
+	<title>Programa Integra Vida | Biopas</title>
 
 </head>
 
@@ -31,7 +31,7 @@
 						<div class="row justify-content-between align-items-center">
 							<div class="col-md-12 pt-40">
 								<div class="heading-block mb-0 border-bottom-0 text-center">
-									<h3 class="ls-0 text-transform-none font-merck text-rosa">Erro</h3>		
+									<h3 class="ls-0 text-transform-none font-qrv text-rosa">Erro</h3>		
 									<p class="text-roxo">Ocorre um erro no sistema. Nossa equipe já foi notificada. Tente novamente mais tarde.</p>
 								</div>
 							</div>
