--- a/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -262,7 +262,7 @@
 						<div class="row">
 
 
-							<div class="col-lg-12 text-center">
+							<div class="col-lg-12 pb-80 text-center">
 								<p class="text-center-xs">COD XXXXXX-Fev/2025 - Material destinado a todos os públicos.</p>
 								<img src="img/logo-biopas.png" alt="Biopas" title="Biopas">
 								<h3 class="text-center-xs mb-0 pt-30 fw-light">Líder em soluções conectando você a sua melhor saúde.</h3>
@@ -270,6 +270,7 @@
 
 							</div>
 
+							<!--
 							<div class="col-lg-12 text-center pt-80 mb-0">
 								<p>
 									<a target="_blank" href="#" class="text-black">Política de Privacidade</a>
@@ -277,10 +278,9 @@
 									<a target="_blank" href="#" class="text-black">Termos de Uso</a>
 								</p>
 							</div>
+							-->
 						</div>
 					</div>
-
-					<!-- <p class="text-white text-center mt-40">© 2017 - 2024 Merck KGaA, Darmstadt, Germany and/or its affiliates. All rights reserved.</p> -->
 
 					<p class=" text-center mt-40">
 						© 2025 Programa Integra Vida®. All rights reserved. <br>
