--- a/src/BiopasIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
@@ -50,7 +50,7 @@
 
 							<ul class="menu-container">
 								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Como Funciona</div></a></li>
-								<li class="menu-item"><a class="menu-link" href="cadastre-se"><div>Cadastre-se</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Cadastre-se</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="/#encontre"><div>Encontre uma Farmácia</div></a></li>
 								<li class="menu-item"><a class="menu-link open-regulamento-menu" href="#modal-regulamento"><div>Regulamento</div></a></li>
 							</ul>
