--- a/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -41,7 +41,7 @@
 
 							<ul class="menu-container justify-content-center">
 								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Sobre o Programa</div></a></li>
-								<li class="menu-item"><a class="menu-link" href="/cadastre-se"><div>Como Participar</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Como Participar</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="/#encontre"><div>Encontre uma Farmácia</div></a></li>
 								<li class="menu-item"><a class="menu-link open-regulamento-menu" href="#modal-regulamento"><div>Regulamento</div></a></li>
 							</ul>
