Ajuste de margem de texto cortado e link de Sobre programa no menu

--- a/src/BiopasIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/cadastre-se.cshtml
@@ -49,7 +49,7 @@
 						<nav class="primary-menu with-arrows">
 
 							<ul class="menu-container">
-								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Como Funciona</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="/#sobre-programa"><div>Como Funciona</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Cadastre-se</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="/#encontre"><div>Encontre uma Farmácia</div></a></li>
 								<li class="menu-item"><a class="menu-link open-regulamento-menu" href="#modal-regulamento"><div>Regulamento</div></a></li>
