--- a/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -40,7 +40,7 @@
 
 
 							<ul class="menu-container justify-content-center">
-								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Sobre o Programa</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="/#sobre-programa"><div>Sobre o Programa</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="/#como-funciona"><div>Como Participar</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="/#encontre"><div>Encontre uma Farmácia</div></a></li>
 								<li class="menu-item"><a class="menu-link open-regulamento-menu" href="#modal-regulamento"><div>Regulamento</div></a></li>
@@ -60,13 +60,13 @@
 
 		<!-- Slider
 		============================================= -->
-		<section id="" class=" bg-white">
+		<section id="sobre-programa" class=" bg-white">
 
 
 
 			<!-- Slider Titles
 			============================================= -->
-			<div class="pb-50 pt-50 text-center container dark ">
+			<div class="pb-50 pt-50 pb-0-mob text-center container dark ">
 				<div class="row justify-content-between align-items-center">
 					<div class="col-md-12">
 						<div class="slider-title">
