Ajuste no espaçamento da lista de farmácias para remover o corte dos ícones quando scrollar os itens

--- a/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -233,8 +233,10 @@
 							</div>
 
 							<div class="col-md-4" style="max-height:600px">
-								<div class="box-resultados">
-									<div class="box-resultados-int">
+								<div class="box-resultados hidden">
+									<div class="box-resultados-margin">
+										<div class="box-resultados-int">
+										</div>
 									</div>
 								</div>
 							</div>
