Retorno do texto e remoção apenas das aspas

--- a/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
+++ b/src/BiopasIntegraVida.Web/Views/LandingPages/index.cshtml
@@ -285,7 +285,8 @@
 					</div>
 
 					<p class=" text-center mt-40">
-						© 2025 Programa Integra Vida®. All rights reserved.
+						© 2025 Programa Integra Vida®. All rights reserved. <br>
+						AV-CHP-ATA-M31-2025-Vig.MAR2027-BR. Material aprovado em março de 2025
 					</p>
 				</div>
 			</div>
